# lsd-messaging

./: .gitignore  Cargo.toml  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
app/: agent.py  bot.py
crates/lsmsg-core/: Cargo.toml
crates/lsmsg-core/src/: error.rs  event.rs  handler.rs  ingress.rs  langgraph.rs  lib.rs  platform.rs  slack.rs  teams.rs
crates/lsmsg-ffi/: Cargo.toml
crates/lsmsg-ffi/include/: lsmsg.h
crates/lsmsg-ffi/src/: lib.rs
crates/lsmsg-napi/: Cargo.toml
crates/lsmsg-napi/src/: lib.rs
crates/lsmsg-py/: Cargo.toml
crates/lsmsg-py/src/: lib.rs
lsmsg-rs/: .gitignore  Cargo.toml  README.md  pyproject.toml
lsmsg-rs/.github/workflows/: wheels.yml
lsmsg-rs/python/lsmsg_rs/: __init__.py  bridge.py  chat_app.py
lsmsg-rs/src/: lib.rs
lsmsg-rs/tests/python/: test_api.py  test_bridge.py  test_chat_app.py
sdks/go/: bot.go  go.mod  lsmsg.go  lsmsg_integration_test.go  lsmsg_test.go  types.go
sdks/java/: build.sh  test.sh
sdks/java/src/main/java/dev/lsmsg/: Bot.java  BotConfig.java  Event.java  EventHandler.java  EventKind.java  HandlerOptions.java  InvokeOptions.java  Json.java  LangGraphClient.java  LsmsgException.java  NativeBridge.java  Platform.java  PlatformCapabilities.java  RunChunk.java  RunRequest.java  RunResult.java  SentMessage.java  Slack.java  SlackWebhookResult.java  Teams.java  ThreadIds.java  UserInfo.java  WebhookResponse.java
sdks/java/src/test/java/dev/lsmsg/: BotTest.java  LangGraphClientTest.java  NativeBridgeTest.java  TestMain.java  TestSupport.java
sdks/python/: pyproject.toml
sdks/python/benchmarks/: test_hot_paths.py
sdks/python/src/botmux/: __init__.py  _adapters.py  _bot.py  _context.py  _remote.py  _types.py  testing.py
sdks/python/src/lsmsg/: __init__.py  _adapters.py  _bot.py  _context.py  _remote.py  _types.py  testing.py
sdks/python/tests/: conftest.py  test_bot.py  test_slack_parsing.py  test_teams_parsing.py
sdks/typescript/: package-lock.json  package.json
sdks/typescript/bench/: bot.bench.ts
sdks/typescript/src/: bot.ts  index.ts  types.ts
sdks/typescript/tests/: bot.test.ts
src/lsmsg/: __init__.py  _bot.py  _capabilities.py  _errors.py  _events.py  _langgraph_backend.py  _platforms.py  _reply.py  _run.py  _slack.py  _teams.py  testing.py
tests/: conftest.py  test_bot.py  test_capabilities.py  test_events.py  test_import_time.py  test_platforms.py  test_slack.py  test_teams.py  test_testing.py
tests/integration/: test_langgraph_e2e.py
