[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsmsg"
dynamic = ["version"]
description = "Unified messaging SDK for wiring Slack/Teams/Discord bots to LangGraph agents"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "starlette>=0.39",
    "langgraph-sdk>=0.3.9",
    "typing-extensions>=4",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.version]
path = "src/lsmsg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lsmsg"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-watch>=4",
    "httpx>=0.27",
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "langgraph-cli[inmem]>=0.4.14",
]

[tool.uv.workspace]
members = ["lsmsg-rs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"
