[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "lsmsg-rs"
version = "0.1.0"
description = "Unified messaging runtime in Rust with native Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "lsmsg contributors" }
]
dependencies = [
  "starlette>=0.39",
  "pyjwt[crypto]>=2.10",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[tool.maturin]
python-source = "python"
module-name = "lsmsg_rs._lsmsg_rs"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["python"]
addopts = "-q"

[dependency-groups]
dev = [
    "langgraph>=1.0.10",
    "langgraph-cli>=0.4.14",
]
