[package]
name = "lsmsg-core"
version = "0.1.0"
edition = "2021"
description = "Unified messaging core — webhook parsing, event normalization, LangGraph client"
license = "MIT"

[dependencies]
hmac = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
uuid = { version = "1", features = ["v5"] }
