[package]
name = "lsmsg-napi"
version = "0.1.0"
edition = "2021"
description = "napi-rs bindings for lsmsg-core"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
lsmsg-core = { path = "../lsmsg-core" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde_json = "1"
