[package]
name = "lsmsg-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 bindings for lsmsg-core"
license = "MIT"

[lib]
name = "_lsmsg_core"
crate-type = ["cdylib"]

[dependencies]
lsmsg-core = { path = "../lsmsg-core" }
pyo3 = { version = "0.23", features = ["abi3-py39"] }
serde_json = "1"
