[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lsmsg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "starlette",
    "anyio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.maturin]
manifest-path = "../../crates/lsmsg-py/Cargo.toml"
module-name = "lsmsg._lsmsg_core"
python-source = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
